--- a/package.json
+++ b/package.json
@@ -3,18 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "abhay": "concurrently \"npm run dev\" \"cd backend && npm start\"",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.18.0",
     "@reduxjs/toolkit": "^2.2.1",
     "captcha-generator-alphanumeric": "^1.10.2",
+    "cloudinary": "^2.0.1",
     "framer-motion": "^11.0.5",
     "greeting-time": "^1.0.0",
     "js-cookie": "^3.0.5",
+    "lottie-react": "^2.4.0",
     "next": "^14.1.0",
+    "next-cloudinary": "^6.0.1",
     "nextjs-toploader": "^1.6.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
