--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.18.0",
     "@reduxjs/toolkit": "^2.2.1",
+    "@stripe/stripe-js": "^3.0.6",
     "captcha-generator-alphanumeric": "^1.10.2",
     "cloudinary": "^2.0.1",
     "framer-motion": "^11.0.5",
     "greeting-time": "^1.0.0",
     "js-cookie": "^3.0.5",
     "lottie-react": "^2.4.0",
+    "lucide-react": "^0.349.0",
     "next": "^14.1.0",
     "next-cloudinary": "^6.0.1",
     "nextjs-toploader": "^1.6.6",
     "prop-types": "^15.8.1",
+    "razorpay": "^2.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
