--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stripe/stripe-js": "^3.0.6",
     "axios": "^1.6.7",
     "captcha-generator-alphanumeric": "^1.10.2",
+    "chart.js": "^4.4.2",
     "cloudinary": "^2.0.1",
     "framer-motion": "^11.0.5",
     "greeting-time": "^1.0.0",
@@ -27,6 +28,7 @@
     "prop-types": "^15.8.1",
     "razorpay": "^2.9.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
