--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "html-entities": "^2.5.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "xml2js": "^0.6.2"
   }
 }
